Chapter03, dependency injection example update